HW18-JDBC improve 4